# mcpcourse

./: .env  README.md  client_docker.py  image for article.pptx  mcp_server.json  pyproject.toml  step by step how to setup.txt
mcpserver/: Dockerfile  client-sse.py  client-stdio.py  server.py
server/: client.py  weather.json  weather.py
